// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavDrawer snapshots renders default props 1`] = `
<MuiThemeProvider
  theme={Object {}}
>
  <nav
    className="drawer"
  >
    <Hidden
      implementation="css"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={true}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Drawer)
        ModalProps={
          Object {
            "keepMounted": true,
          }
        }
        anchor="left"
        classes={
          Object {
            "paper": "drawerPaper",
          }
        }
        onClose={[Function]}
        open={false}
        variant="temporary"
      >
        <div>
          <div
            className="toolbar"
          />
          <WithStyles(Divider) />
          <WithStyles(List) />
          <WithStyles(Divider) />
          <div
            className="social"
          >
            <div
              className="twitter"
            >
              <Follow
                onLoad={[Function]}
                options={Object {}}
                username="chrisdopuch"
              />
            </div>
            <a
              aria-label="Follow @chrisdopuch on GitHub"
              className="github-button"
              href="https://github.com/chrisdopuch"
            >
              Follow @chrisdopuch
            </a>
          </div>
        </div>
      </WithStyles(Drawer)>
    </Hidden>
    <Hidden
      implementation="css"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={true}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Drawer)
        classes={
          Object {
            "paper": "drawerPaper",
          }
        }
        open={true}
        variant="permanent"
      >
        <div>
          <div
            className="toolbar"
          />
          <WithStyles(Divider) />
          <WithStyles(List) />
          <WithStyles(Divider) />
          <div
            className="social"
          >
            <div
              className="twitter"
            >
              <Follow
                onLoad={[Function]}
                options={Object {}}
                username="chrisdopuch"
              />
            </div>
            <a
              aria-label="Follow @chrisdopuch on GitHub"
              className="github-button"
              href="https://github.com/chrisdopuch"
            >
              Follow @chrisdopuch
            </a>
          </div>
        </div>
      </WithStyles(Drawer)>
    </Hidden>
  </nav>
</MuiThemeProvider>
`;

exports[`NavDrawer snapshots renders with items 1`] = `
<MuiThemeProvider
  theme={Object {}}
>
  <nav
    className="drawer"
  >
    <Hidden
      implementation="css"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={true}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Drawer)
        ModalProps={
          Object {
            "keepMounted": true,
          }
        }
        anchor="left"
        classes={
          Object {
            "paper": "drawerPaper",
          }
        }
        onClose={[Function]}
        open={false}
        variant="temporary"
      >
        <div>
          <div
            className="toolbar"
          />
          <WithStyles(Divider) />
          <WithStyles(List)>
            <WithStyles(ListItem)
              button={true}
              component={[Function]}
              key="Home"
              onClick={[Function]}
              to="/"
            >
              <WithStyles(ListItemIcon)>
                <mockConstructor />
              </WithStyles(ListItemIcon)>
              <WithStyles(ListItemText)
                primary="Home"
              />
            </WithStyles(ListItem)>
            <WithStyles(ListItem)
              button={true}
              component={[Function]}
              key="About me"
              onClick={[Function]}
              to="/about"
            >
              <WithStyles(ListItemIcon)>
                <mockConstructor />
              </WithStyles(ListItemIcon)>
              <WithStyles(ListItemText)
                primary="About me"
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>
          <WithStyles(Divider) />
          <div
            className="social"
          >
            <div
              className="twitter"
            >
              <Follow
                onLoad={[Function]}
                options={Object {}}
                username="chrisdopuch"
              />
            </div>
            <a
              aria-label="Follow @chrisdopuch on GitHub"
              className="github-button"
              href="https://github.com/chrisdopuch"
            >
              Follow @chrisdopuch
            </a>
          </div>
        </div>
      </WithStyles(Drawer)>
    </Hidden>
    <Hidden
      implementation="css"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={true}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={false}
      xsUp={false}
    >
      <WithStyles(Drawer)
        classes={
          Object {
            "paper": "drawerPaper",
          }
        }
        open={true}
        variant="permanent"
      >
        <div>
          <div
            className="toolbar"
          />
          <WithStyles(Divider) />
          <WithStyles(List)>
            <WithStyles(ListItem)
              button={true}
              component={[Function]}
              key="Home"
              onClick={[Function]}
              to="/"
            >
              <WithStyles(ListItemIcon)>
                <mockConstructor />
              </WithStyles(ListItemIcon)>
              <WithStyles(ListItemText)
                primary="Home"
              />
            </WithStyles(ListItem)>
            <WithStyles(ListItem)
              button={true}
              component={[Function]}
              key="About me"
              onClick={[Function]}
              to="/about"
            >
              <WithStyles(ListItemIcon)>
                <mockConstructor />
              </WithStyles(ListItemIcon)>
              <WithStyles(ListItemText)
                primary="About me"
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>
          <WithStyles(Divider) />
          <div
            className="social"
          >
            <div
              className="twitter"
            >
              <Follow
                onLoad={[Function]}
                options={Object {}}
                username="chrisdopuch"
              />
            </div>
            <a
              aria-label="Follow @chrisdopuch on GitHub"
              className="github-button"
              href="https://github.com/chrisdopuch"
            >
              Follow @chrisdopuch
            </a>
          </div>
        </div>
      </WithStyles(Drawer)>
    </Hidden>
  </nav>
</MuiThemeProvider>
`;
